--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,47 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+	animation: App-logo-spin infinite 20s linear;
+	height: 80px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+	background-image: url('deli-hero.jpg');
+	height: 50vh;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	opacity: 0.5;
 }
 
-.App-title {
-  font-size: 1.5em;
+.App-caption {
+	position: absolute;
+	left: 0;
+	bottom: 20px;
+	width: 60%;
+	text-align: center;
+	color: #fff;
+	background-color: #000;
+	opacity: 1;
 }
 
 .App-intro {
-  font-size: large;
+	font-size: large;
 }
 
-.navbar-inverse{
-  margin: 0;
-  border-radius: 0;
+.navbar-inverse {
+	margin: 0;
+	border-radius: 0;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
