--- a/src/DeliStore.css
+++ b/src/DeliStore.css
@@ -1,3 +1,14 @@
 .deli-image{
-    width: 300px;
+    width: 100%;
+    height: 60vh;
 }
+.imageWrapper {
+    position: relative;
+  }
+  .gradeImage {
+    position: absolute;
+    width: 75px;
+    height: 75px;
+    bottom: 10px;
+    left: 10px;
+  }
